--- a/popup.html
+++ b/popup.html
@@ -9,11 +9,13 @@
 <script src="highlighter.js"></script>
 <script src="string_utils.js"></script>
 <script src="xpath.js"></script>
-<script src="popup.js"></script>
+<!-- For test -->
+<!-- <script src="popup.js"></script> -->
 </head>
 <body>
 <div id="main">
-<a id="bookmark" href="#">
+<!-- For test -->
+<a id="bookmark" href="#" onclick="highlightTest()">
     <div id="bookmark-annotate">
     	<b class="icon" style="background-color: red;"></b>
     	Annotate
