--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>popup</title>
-<link rel="stylesheet" href="css/popup.css">
-<script src="all.js"></script>
-<script src="content.js"></script>
-<script src="highlighter.js"></script>
-<script src="string_utils.js"></script>
-<script src="xpath.js"></script>
-<!-- For test -->
-<!-- <script src="popup.js"></script> -->
+	<meta charset="utf-8">
+	<title>popup</title>
+	<link rel="stylesheet" href="css/popup.css">
+	<script src="all.js"></script>
+	<script src="content.js"></script>
+	<!-- <script src="highlighter.js"></script>
+	<script src="xpath.js"></script> -->
+	<script src="string_utils.js"></script>
+	
+	<!-- For test -->
+	<script src="popup.js"></script>
+	<script src="tabs.js"></script>
 </head>
 <body>
 <div id="main">
 <!-- For test -->
-<a id="bookmark" href="#" onclick="highlightTest()">
+<a id="bookmark" href="javascript:void(0)">
     <div id="bookmark-annotate">
     	<b class="icon" style="background-color: red;"></b>
     	Annotate
