add popup.js to popup.html

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
 <script src="highlighter.js"></script>
 <script src="string_utils.js"></script>
 <script src="xpath.js"></script>
+<script src="popup.js"></script>
 <!-- For test -->
 <!-- <script src="popup.js"></script> -->
 </head>
