--- a/popup.html
+++ b/popup.html
@@ -60,9 +60,15 @@
 	</a>
 	<br>
 	<a id="out_manage" href="javascript:void(0)">
-		<div id="manege" style="font-size:12px">
+		<div id="manage" style="font-size:12px">
 	    	<b class="icon" style="background-color: purple;"></b>
 	    	Manage
+	    </div>
+	</a>
+	<br>
+	<a id="out_login" href="javascript:void(0)">
+		<div id="login" style="font-size:12px">
+	    	<b class="icon" style="background-color: black;"></b>
 	    </div>
 	</a>
 	<br>
